welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: warning: enclosing method Tableau has result type Unit: return value discarded
  return T
  ^Array1:24: error: not found: value T
  setCouleurBrosse(T(j))
                   ^Array1:30: error: not found: value H
  for (j <- 0 to H-1){
                 ^Array1:31: error: not found: value T
    T(j) = getCouleurSol()
    ^