welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() { getMotif()}


def Tableau(){
	var H = getMondeHauteur()
	var T = new Array[Color](H)
  return T
}
def reproMotif(){
  var i = getMondeLargeur()
  for (j <- 0 to i-1){
    Motif()
    gauche()
    avance()
    droite()
    avance()    
  }}
 

def Motif(){
  var j = getMondeLargeur()
  for (k <- 0 to j-1)
  setCouleurBrosse(T(j))
  brosse()
  avance()
}
  
def getMotif(){
  for (j <- 0 to H-1){
    T(j) = getCouleurSol()
    avance() 
  }
}

def brosse(){
  baisseBrosse()
  leveBrosse()}